--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </section>
       <section class="listContainer">
         <div class="listTitle">
-          <h1>To Do List</h1>
+          <h1 tabindex="0">To Do List</h1>
           <button
             id="clearItems"
             class="button"
@@ -51,20 +51,8 @@
           </button>
         </div>
         <hr />
-        <div id="listItems">
-          <div class="item">
-            <input type="checkbox" id="1" tabindex="0" />
-            <label for="1">Eat</label>
-          </div>
-          <div class="item">
-            <input type="checkbox" id="2" tabindex="0" />
-            <label for="2">Sleep</label>
-          </div>
-          <div class="item">
-            <input type="checkbox" id="3" tabindex="0" />
-            <label for="3">Code</label>
-          </div>
-        </div>
+        <div id="listItems"></div>
+        <p id="confirmation" class="confirmation" aria-live="assertive"></p>
       </section>
     </main>
   </body>
